# Presence-Tracker

./: .env.example  .gitignore  API_README.md  DEPLOYMENT.md  Dockerfile  PAIRING.md  README.md  astro.config.mjs  bluetooth-agent.service  bluetooth-discoverable.service  bluetooth_agent.py  bluetooth_scanner.py  bt-agent.service  convex.json  docker-compose.yml  main.py  make_discoverable.sh  package-lock.json  package.json  presence-tracker.service  presence_tracker.py  pyproject.toml  requirements.txt  setup.sh  tsconfig.json  web-dashboard.service  web_server.py
.planning/: PROJECT.md
DingDong/: app.json  package.json
config/: agent.toml
convex/: auth.ts  betterAuth.ts  crons.ts  devices.ts  fixPendingDevices.ts  http.ts  integrations.ts  logs.ts  notifications.ts  schema.ts
convex-local/: devices.ts  schema.ts
docker/: entrypoint-config.sh  nginx.conf
frontend/: Dockerfile  app.js  auth.js  config.js  edit_modal.html  entrypoint.sh  index.html  integrations.js  logs.js  server.js  style.css
logs/: bluetooth_scanner.log.1
presence_tracker/: __init__.py  bluetooth.py  config.py  convex_client.py  logging_utils.py  presence_loop.py  state.py
rust-agent/: Cargo.toml  README_GUI.md
rust-agent/src/: bluetooth_agent.rs  bluetooth_probe.rs  config.rs  convex_client.rs  gui.rs  gui_simple.rs  lib.rs  logging.rs  main.rs  presence_loop.rs
rust-agent/tests/: config_defaults.rs  convex_client_http.rs  probe_runner.rs
scripts/: check_rust_loc.sh  generate-runtime-config.mjs  relativize-astro-assets.mjs
src/: bluetooth_agent.py  bluetooth_scanner.py  (+3 more)
(+30 files in other folders)
