[package]
name = "presence-tracker-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "presence-tracker-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bluer = { version = "0.17", features = ["bluetoothd"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
convex = "0.10"
dotenvy = "0.15"
eframe = "0.29"
egui = "0.29"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tokio-stream = "0.1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
wiremock = "0.6"
